[project]
name = "security-review-agent"
version = "0.1.0"
description = "An LLM-powered agent that runs security scanners, prioritizes risk, and generates remediation reports."
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.49.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "pip-audit>=2.10.1",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.34.0",
]
